@@ -112,8 +112,10 @@ if (MSVC)
   option (FEATURE_MEDIAFOUNDATION "Build TeamTalk DLL with Media Foundation Streaming support" ON)
   option (FEATURE_MSDMO "Build TeamTalk DLL with Microsoft DirectX Media Objects (DMO) Resampler support" ON)
   option (FEATURE_VIDCAP "Build TeamTalk DLL with DirectShow Video Capture support (obsolete)" OFF)
+  option (FEATURE_FFMPEG "Build TeamTalk DLL with FFmpeg support" ON)
   add_feature_info (FEATURE_MEDIAFOUNDATION FEATURE_MEDIAFOUNDATION "Microsoft Media Foundation for A/V processing")
   add_feature_info (FEATURE_MSDMO FEATURE_MSDMO "Microsoft DirectX for audio resampling")
+  add_feature_info (FEATURE_FFMPEG FEATURE_FFMPEG "FFmpeg A/V library")
 else()
   option (FEATURE_FFMPEG "Build TeamTalk DLL with FFmpeg support" ON)
   add_feature_info (FEATURE_FFMPEG FEATURE_FFMPEG "FFmpeg A/V library")
