@@ -135,6 +135,9 @@ Studio 2022 run CMake like this:
 Note that WebRTC dependency will create a folder in `C:\webrtc` where
 it downloads its repository.
 
+When both `FEATURE_FFMPEG` and `FEATURE_MEDIAFOUNDATION` are enabled,
+FFmpeg is tried first and Media Foundation is used as fallback.
+
 ### Build TeamTalk Binaries for Ubuntu 22
 
 Run the following command in TEAMTALK_ROOT:
@@ -280,8 +283,10 @@ The following feature toggles are available:
   * Toolchain mapping: `TOOLCHAIN_SPEEXDSP`
 * `FEATURE_FFMPEG`
   * FFmpeg for streaming and audio resampling
-  * Supported platforms: macOS, iOS, Android, Ubuntu/Linux, Raspbian
+  * Supported platforms: macOS, iOS, Android, Ubuntu/Linux, Raspbian, Windows
   * Toolchain mapping: `TOOLCHAIN_FFMPEG`
+  * Building FFmpeg on Windows requires MSYS2
+    * Install in `C:/MSYS64` and run `pacman -S base-devel`
 * `FEATURE_V4L2`
   * Video for Linux 2 for video capture support
   * Supported platforms: Ubuntu/Linux, Raspbian
