@@ -1,0 +1,3 @@
+SET MSYS2_PATH_TYPE=inherit
+SET CHERE_INVOKING=1
+@FFMPEG_BASH_EXE_PATH@ --login -c "./configure --prefix=@FFMPEG_INSTALL_DIR@ --toolchain=msvc --arch=@FFMPEG_ARCH@ --target-os=@FFMPEG_TARGET_OS@ --disable-doc --disable-programs --disable-autodetect --disable-debug && make @TOOLCHAIN_BUILD_MAKEJOBS@ && make install"
